cks/protect-metadata/np-cloud-metadata-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-cloud-metadata-allow

spec:
  podSelector:
    matchLabels:
      role: metadata-accessor
  policyTypes:
    - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 169.254.169.254/32
